--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
