--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
+    "react-color-v2": "^2.19.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0"
