--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "firebase": "^10.11.1",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-color-v2": "^2.19.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.22",
     "@types/react-icons": "^3.0.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
