--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,9 @@ command = 'npm run build'
 publish = 'dist'
 base = '/'
 
+[build.environment]
+  NODE_VERSION = "18"
+
 [[redirects]]
 from = "/*"
 to = "/index.html"
