--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,7 @@ base = '/'
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps --force"
+  ROLLUP_DISABLE_NATIVE = "true"
 
 [[redirects]]
 from = "/*"
